--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+!.gitignore
+
+.DS*
+.Trash*
+._Trash*
+
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
